...
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pocketpaint_font_size_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/pocketpaint_round_rect_shape"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
...

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pocketpaint_text_tool_dialog_toggle_underlined"
                    style="@style/CircularToggleButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/text_tool_dialog_underline_shortcut"
                    android:textSize="20sp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
...

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pocketpaint_text_tool_dialog_toggle_italic"
                    style="@style/CircularToggleButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/text_tool_dialog_italic_shortcut"
                    android:textSize="20sp"
                    android:textStyle="italic" />
...

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pocketpaint_text_tool_dialog_toggle_bold"
                    style="@style/CircularToggleButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/text_tool_dialog_bold_shortcut"
                    android:textSize="20sp"
                    android:textStyle="bold" />
...

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_above="@id/pocketpaint_text_tool_dialog_list_font">

            <include
                android:id="@+id/pocketpaint_layout_text_tool_options_view_shape_size"
                layout="@layout/pocketpaint_layout_shape_size_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
...
            android:layout_alignParentBottom="true"
            android:background="@android:color/background_light"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/pocketpaint_text_tool_dialog_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundtint_color_edittext_state_list"
                android:hint="@string/text_tool_dialog_input_hint"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </RelativeLayout>
...
