/*
 * Paintroid: An image manipulation application for Android.
 * Copyright (C) 2010-2022 The Catrobat Team
 * (<http://developer.catrobat.org/credits>)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

@file:Suppress("DEPRECATION")

package org.catrobat.paintroid.test.espresso.tools

import android.content.pm.ActivityInfo
import android.graphics.Color
import android.graphics.Paint
import android.graphics.PointF
import android.graphics.Typeface
import android.widget.EditText
import androidx.core.content.res.ResourcesCompat
import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.idling.CountingIdlingResource
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withHint
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.rule.ActivityTestRule
import com.google.android.material.button.MaterialButton
import kotlinx.coroutines.delay
import kotlinx.coroutines.runBlocking
import org.catrobat.paintroid.MainActivity
import org.catrobat.paintroid.R
import org.catrobat.paintroid.contract.LayerContracts
import org.catrobat.paintroid.test.espresso.util.DrawingSurfaceLocationProvider
import org.catrobat.paintroid.test.espresso.util.MainActivityHelper
import org.catrobat.paintroid.test.espresso.util.UiInteractions
import org.catrobat.paintroid.test.espresso.util.UiMatcher
import org.catrobat.paintroid.test.espresso.util.wrappers.DrawingSurfaceInteraction.Companion.onDrawingSurfaceView
import org.catrobat.paintroid.test.espresso.util.wrappers.ToolBarViewInteraction.Companion.onToolBarView
import org.catrobat.paintroid.test.espresso.util.wrappers.ToolPropertiesInteraction.Companion.onToolProperties
import org.catrobat.paintroid.test.espresso.util.wrappers.TopBarViewInteraction.Companion.onTopBarView
import org.catrobat.paintroid.test.utils.ScreenshotOnFailRule
import org.catrobat.paintroid.tools.FontType
import org.catrobat.paintroid.tools.ToolReference
import org.catrobat.paintroid.tools.ToolType
import org.catrobat.paintroid.tools.implementation.BOX_OFFSET
import org.catrobat.paintroid.tools.implementation.MARGIN_TOP
import org.catrobat.paintroid.tools.implementation.TEXT_SIZE_MAGNIFICATION_FACTOR
import org.catrobat.paintroid.tools.implementation.TextTool
import org.catrobat.paintroid.ui.tools.FontListAdapter
import org.hamcrest.CoreMatchers.not
import org.hamcrest.Matchers
import org.junit.Assert
import org.junit.After
import org.junit.Before
import org.junit.Ignore
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import kotlin.math.roundToInt

@RunWith(AndroidJUnit4::class)
@Suppress("LargeClass")
class TextToolIntegrationTest {
    @get:Rule
    var launchActivityRule = ActivityTestRule(MainActivity::class.java)

    @get:Rule
    var screenshotOnFailRule = ScreenshotOnFailRule()
    private var activityHelper: MainActivityHelper? = null
    private var textTool: TextTool? = null
    private var textToolAfterZoom: TextTool? = null
    private var textEditText: EditText? = null
    private var fontList: RecyclerView? = null
    private var underlinedToggleButton: MaterialButton? = null
    private var italicToggleButton: MaterialButton? = null
    private var boldToggleButton: MaterialButton? = null
    private var textSize: EditText? = null
    private var layerModel: LayerContracts.Model? = null
    private lateinit var activity: MainActivity
    private var toolReference: ToolReference? = null

    private val surfaceBitmapHeight = layerModel?.height
    private val pixelsDrawingSurface = surfaceBitmapHeight?.let { IntArray(it) }
    private val canvasPoint = centerBox()
    private var pixelAmountBefore = pixelsDrawingSurface?.let { countPixelsWithColor(it, Color.BLACK) }
    private lateinit var idlingResource: CountingIdlingResource

    @Before
    fun setUp() {
        activity = launchActivityRule.activity
        activityHelper = MainActivityHelper(activity)
        layerModel = activity.layerModel
        toolReference = activity.toolReference

        onToolBarView().performSelectTool(ToolType.TEXT)

        textTool = toolReference?.tool as TextTool
        textEditText = activity.findViewById(R.id.pocketpaint_text_tool_dialog_input_text)
        fontList = activity.findViewById(R.id.pocketpaint_text_tool_dialog_list_font)
        underlinedToggleButton =
            activity.findViewById(R.id.pocketpaint_text_tool_dialog_toggle_underlined)
        italicToggleButton = activity.findViewById(R.id.pocketpaint_text_tool_dialog_toggle_italic)
        boldToggleButton = activity.findViewById(R.id.pocketpaint_text_tool_dialog_toggle_bold)
        textSize = activity.findViewById(R.id.pocketpaint_font_size_text)
        textTool?.resetBoxPosition()
        idlingResource = activity.idlingResource
        IdlingRegistry.getInstance().register(idlingResource)
    }

    @After
    fun tearDown() {
        IdlingRegistry.getInstance().unregister(idlingResource)
    }

    @Test
    fun testTextToolStillEditableAfterClickingInsideTheCanvasTextToolOptionsVisible() {
        selectFormatting(FormattingOptions.ITALIC)
        selectFormatting(FormattingOptions.BOLD)
        selectFormatting(FormattingOptions.UNDERLINE)
        enterTestText()
        onView(withId(R.id.pocketpaint_text_tool_dialog_input_text)).perform(click())
        onView(withId(R.id.pocketpaint_text_tool_dialog_input_text)).perform(
            ViewActions.replaceText(
                TEST_TEXT_ADVANCED
            )
        )
        italicToggleButton?.let { Assert.assertTrue(it.isChecked) }
        boldToggleButton?.let { Assert.assertTrue(it.isChecked) }
        underlinedToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertEquals(TEST_TEXT_ADVANCED, textEditText?.text?.toString())
        onView(withId(R.id.pocketpaint_text_tool_dialog_input_text)).check(matches(isDisplayed()))
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font)).check(matches(isDisplayed()))
        onView(withId(R.id.pocketpaint_text_tool_dialog_toggle_underlined)).check(matches(isDisplayed()))
        onView(withId(R.id.pocketpaint_text_tool_dialog_toggle_italic)).check(matches(isDisplayed()))
        onView(withId(R.id.pocketpaint_text_tool_dialog_toggle_bold)).check(matches(isDisplayed()))
        onView(withId(R.id.pocketpaint_font_size_text)).check(matches(isDisplayed()))
    }

    @Test
    fun testTextToolNotEditableAfterClickingOutsideTheCanvasTextToolOptionsHidden() {
        selectFormatting(FormattingOptions.ITALIC)
        selectFormatting(FormattingOptions.BOLD)
        selectFormatting(FormattingOptions.UNDERLINE)
        enterTestText()
        onDrawingSurfaceView()
            .perform(UiInteractions.touchAt(DrawingSurfaceLocationProvider.MIDDLE))

        italicToggleButton?.let { Assert.assertTrue(it.isChecked) }
        boldToggleButton?.let { Assert.assertTrue(it.isChecked) }
        underlinedToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertEquals(TEST_TEXT, textEditText?.text?.toString())
        onView(withId(R.id.pocketpaint_text_tool_dialog_input_text))
            .check(matches(not(isDisplayed())))
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font))
            .check(matches(not(isDisplayed())))
        onView(withId(R.id.pocketpaint_text_tool_dialog_toggle_underlined))
            .check(matches(not(isDisplayed())))
        onView(withId(R.id.pocketpaint_text_tool_dialog_toggle_italic))
            .check(matches(not(isDisplayed())))
        onView(withId(R.id.pocketpaint_text_tool_dialog_toggle_bold))
            .check(matches(not(isDisplayed())))
        onView(withId(R.id.pocketpaint_font_size_text))
            .check(matches(not(isDisplayed())))
    }

    @Ignore("Fix bug in own ticket , focus is not correctly implemented in google play either")
    @Test
    fun testDialogKeyboardTextBoxAppearanceOnStartup() {
        onView(withId(R.id.pocketpaint_text_tool_dialog_input_text))
            .check(matches(ViewMatchers.hasFocus()))
        checkTextBoxDimensionsAndDefaultPosition()
    }

    @Suppress("LongMethod")
    @Test
    fun testDialogDefaultValues() {
        onView(withId(R.id.pocketpaint_text_tool_dialog_input_text))
            .check(matches(withHint(R.string.text_tool_dialog_input_hint)))
            .check(matches(ViewMatchers.withText(textTool?.text)))
        onToolBarView().performSelectTool(ToolType.TEXT)
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font))
            .check(
                matches(
                    UiMatcher.atPosition(
                        0,
                        ViewMatchers.hasDescendant(
                            ViewMatchers.isChecked()
                        )
                    )
                )
            )
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font))
            .check(
                matches(
                    UiMatcher.atPosition(
                        1,
                        ViewMatchers.hasDescendant(
                            ViewMatchers.isNotChecked()
                        )
                    )
                )
            )
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font))
            .perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(2))
            .check(
                matches(
                    UiMatcher.atPosition(
                        2,
                        ViewMatchers.hasDescendant(
                            ViewMatchers.isNotChecked()
                        )
                    )
                )
            )
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font))
            .perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(3))
            .check(
                matches(
                    UiMatcher.atPosition(
                        3,
                        ViewMatchers.hasDescendant(
                            ViewMatchers.isNotChecked()
                        )
                    )
                )
            )
        onView(withId(R.id.pocketpaint_text_tool_dialog_list_font))
            .perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(4))
            .check(
                matches(
                    UiMatcher.atPosition(
                        4,
                        ViewMatchers.hasDescendant(
                            ViewMatchers.isNotChecked()
                        )
                    )
                )
            )
        textTool?.let { Assert.assertFalse(it.underlined) }
        textTool?.let { Assert.assertFalse(it.italic) }
        textTool?.let { Assert.assertFalse(it.bold) }
    }

    @Test
    fun testDialogToolInteraction() {
        enterTestText()
        Assert.assertEquals(TEST_TEXT, textTool?.text)
        selectFontType(FontType.SERIF)
        Assert.assertEquals(FontType.SERIF, textTool?.font)
        Assert.assertEquals(FontType.SERIF, (fontList?.adapter as FontListAdapter?)!!.getSelectedItem())
        selectFormatting(FormattingOptions.UNDERLINE)
        textTool?.let { Assert.assertTrue(it.underlined) }
        underlinedToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertEquals(
            getFormattingOptionAsString(FormattingOptions.UNDERLINE),
            underlinedToggleButton?.text.toString()
        )
        selectFormatting(FormattingOptions.UNDERLINE)
        textTool?.let { Assert.assertFalse(it.underlined) }
        underlinedToggleButton?.let { Assert.assertFalse(it.isChecked) }
        Assert.assertEquals(
            getFormattingOptionAsString(FormattingOptions.UNDERLINE),
            underlinedToggleButton?.text.toString()
        )
        selectFormatting(FormattingOptions.ITALIC)
        Assert.assertTrue(toolMemberItalic)
        italicToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertEquals(
            getFormattingOptionAsString(FormattingOptions.ITALIC),
            italicToggleButton?.text.toString()
        )
        selectFormatting(FormattingOptions.ITALIC)
        Assert.assertFalse(toolMemberItalic)
        italicToggleButton?.let { Assert.assertFalse(it.isChecked) }
        Assert.assertEquals(
            getFormattingOptionAsString(FormattingOptions.ITALIC),
            italicToggleButton?.text.toString()
        )
        selectFormatting(FormattingOptions.BOLD)
        Assert.assertTrue(toolMemberBold)
        boldToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertEquals(getFormattingOptionAsString(FormattingOptions.BOLD), boldToggleButton?.text.toString())
        selectFormatting(FormattingOptions.BOLD)
        Assert.assertFalse(toolMemberBold)
        boldToggleButton?.let { Assert.assertFalse(it.isChecked) }
        Assert.assertEquals(getFormattingOptionAsString(FormattingOptions.BOLD), boldToggleButton?.text.toString())
    }

    @Test
    fun testDialogAndTextBoxAfterReopenDialog() {
        enterTestText()
        selectFontType(FontType.SANS_SERIF)
        selectFormatting(FormattingOptions.UNDERLINE)
        selectFormatting(FormattingOptions.ITALIC)
        selectFormatting(FormattingOptions.BOLD)
        onToolBarView().performCloseToolOptionsView()

        val oldBoxWidth = toolMemberBoxWidth
        val oldBoxHeight = toolMemberBoxHeight
        val boxPosition = toolMemberBoxPosition
        val newBoxPosition = boxPosition?.y?.plus(200)
            ?.let { PointF(boxPosition.x.plus(100), it) }

        toolMemberBoxPosition = newBoxPosition

        onToolBarView().performOpenToolOptionsView()

        Assert.assertEquals(TEST_TEXT, textEditText?.text.toString())
        Assert.assertEquals(FontType.SANS_SERIF, (fontList?.adapter as FontListAdapter?)!!.getSelectedItem())
        underlinedToggleButton?.let { Assert.assertTrue(it.isChecked) }
        italicToggleButton?.let { Assert.assertTrue(it.isChecked) }
        boldToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertTrue(oldBoxWidth == toolMemberBoxWidth && oldBoxHeight == toolMemberBoxHeight)
    }

    @Test
    fun testStateRestoredAfterOrientationChange() {
        enterTestText()
        selectFontType(FontType.SANS_SERIF)
        selectFormatting(FormattingOptions.UNDERLINE)
        selectFormatting(FormattingOptions.ITALIC)
        selectFormatting(FormattingOptions.BOLD)

        val toolMemberBoxPosition = toolMemberBoxPosition
        val expectedPosition = toolMemberBoxPosition?.y?.let { PointF(toolMemberBoxPosition.x, it) }

        textTool = toolReference?.tool as TextTool

        val oldBoxWidth = toolMemberBoxWidth
        val oldBoxHeight = toolMemberBoxHeight

        activity.requestedOrientation = ActivityInfo.SCREEN_ORIENTATION_LANDSCAPE

        Assert.assertEquals(TEST_TEXT, textEditText?.text.toString())
        Assert.assertEquals(FontType.SANS_SERIF, (fontList?.adapter as FontListAdapter?)?.getSelectedItem())
        underlinedToggleButton?.let { Assert.assertTrue(it.isChecked) }
        italicToggleButton?.let { Assert.assertTrue(it.isChecked) }
        boldToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertEquals(expectedPosition, toolMemberBoxPosition)
        Assert.assertEquals(oldBoxWidth.toDouble(), toolMemberBoxWidth.toDouble(), EQUALS_DELTA)
        Assert.assertEquals(oldBoxHeight.toDouble(), toolMemberBoxHeight.toDouble(), EQUALS_DELTA)
    }

    @Test
    fun testCheckBoxSizeAndContentAfterFormatting() {
        enterTestText()
        underlinedToggleButton?.let { Assert.assertFalse(it.isChecked) }
        boldToggleButton?.let { Assert.assertFalse(it.isChecked) }
        italicToggleButton?.let { Assert.assertFalse(it.isChecked) }

        testFontAndPixels()
    }

    // created in order to reduce the complexity of the testCheckBoxSizeAndContentAfterFormatting test
    private fun testFontAndPixels() {
        val fonts = ArrayList<FontType>()
        fonts.add(FontType.SERIF)
        fonts.add(FontType.SANS_SERIF)
        fonts.add(FontType.MONOSPACE)
        fonts.add(FontType.DUBAI)
        fonts.add(FontType.STC)
        checkTextBoxDimensionsAndDefaultPosition()
        for (font in fonts) {
            layerModel?.currentLayer?.bitmap?.eraseColor(Color.TRANSPARENT)
            val boxWidth = toolMemberBoxWidth
            val boxHeight = toolMemberBoxHeight

            selectFontType(font)
            Assert.assertTrue(boxWidth == toolMemberBoxWidth && boxHeight == toolMemberBoxHeight)

            layerModel?.currentLayer?.bitmap?.eraseColor(Color.TRANSPARENT)
            onTopBarView().performClickCheckmark()

            testVariablesInIfStatementsWithSurfacseBitmap()
            testSurfacseBitmapAndPixelAmountAfter()

            if (surfaceBitmapHeight != null && canvasPoint != null && pixelsDrawingSurface != null) {
                layerModel?.currentLayer?.bitmap?.getPixels(
                    pixelsDrawingSurface, 0, 1,
                    canvasPoint.x.toInt(), 0, 1, surfaceBitmapHeight
                )
            }

            testPixelAmountBeforeAndPixelDrawingSurface()
            selectFormatting(FormattingOptions.UNDERLINE)
            underlinedToggleButton?.let { Assert.assertFalse(it.isChecked) }
            selectFormatting(FormattingOptions.ITALIC)
            italicToggleButton?.let { Assert.assertFalse(it.isChecked) }
            selectFormatting(FormattingOptions.BOLD)
            boldToggleButton?.let { Assert.assertFalse(it.isChecked) }
        }
    }

    private fun testSurfacseBitmapAndPixelAmountAfter() {
        if (surfaceBitmapHeight != null && canvasPoint != null && pixelsDrawingSurface != null) {
            layerModel?.currentLayer?.bitmap?.getPixels(
                pixelsDrawingSurface, 0, 1,
                canvasPoint.x.toInt(), 0, 1, surfaceBitmapHeight
            )
        }
        var pixelAmountAfter = pixelsDrawingSurface?.let { countPixelsWithColor(it, Color.BLACK) }
        if (pixelAmountAfter != null) {
            assert(pixelAmountAfter > 0)
        }

        if (pixelAmountBefore != null) {
            Assert.assertTrue(pixelAmountBefore!! < pixelAmountAfter!!)
        }
        selectFormatting(FormattingOptions.ITALIC)
        italicToggleButton?.let { Assert.assertTrue(it.isChecked) }
        Assert.assertTrue(toolMemberItalic)

        layerModel?.currentLayer?.bitmap?.eraseColor(Color.TRANSPARENT)
        onTopBarView().performClickCheckmark()
        pixelAmountAfter = pixelsDrawingSurface?.let { countPixelsWithColor(it, Color.BLACK) }
        if (pixelAmountAfter != null) {
            assert(pixelAmountAfter > 0)
        }

        if (pixelAmountAfter != null) {
            Assert.assertTrue(pixelAmountAfter > pixelAmountBefore!!)
        }
    }

    private fun testPixelAmountBeforeAndPixelDrawingSurface() {
        pixelAmountBefore = pixelsDrawingSurface?.let { countPixelsWithColor(it, Color.BLACK) }
        if (pixelAmountBefore != null) {
            assert(pixelAmountBefore!! > 0)
        }
        selectFormatting(FormattingOptions.BOLD)
        boldToggleButton?.let { Assert.assertTrue(it.isChecked) }

        layerModel?.currentLayer?.bitmap?.eraseColor(Color.TRANSPARENT)
        onTopBarView().performClickCheckmark()
        if (surfaceBitmapHeight != null && canvasPoint != null && pixelsDrawingSurface != null) {
            layerModel?.currentLayer?.bitmap?.getPixels(
                pixelsDrawingSurface, 0, 1,
                canvasPoint.x.toInt(), 0, 1, surfaceBitmapHeight
            )
        }
    }

    private fun testVariablesInIfStatementsWithSurfacseBitmap() {
        if (surfaceBitmapHeight != null && canvasPoint != null && pixelsDrawingSurface != null) {
            layerModel?.currentLayer?.bitmap?.getPixels(
                pixelsDrawingSurface, 0, 1,
                canvasPoint.x.toInt(), 0, 1, surfaceBitmapHeight
            )
        }

        if (pixelAmountBefore != null) {
            assert(pixelAmountBefore!! > 0)
        }

        selectFormatting(FormattingOptions.UNDERLINE)

        underlinedToggleButton?.let { Assert.assertTrue(it.isChecked) }
        layerModel?.currentLayer?.bitmap?.eraseColor(Color.TRANSPARENT)
        onTopBarView().performClickCheckmark()
    }

    @Test
    fun testInputTextAndFormatForTextSize50() {
        enterTestText()
        val boxWidth = toolMemberBoxWidth
        val boxHeight = toolMemberBoxHeight
        onView(withId(R.id.pocketpaint_font_size_text))
            .perform(ViewActions.replaceText("50"))
        checkTextBoxDimensions()
        Assert.assertTrue(
            "Text box width should be larger with bigger text size",
            toolMemberBoxWidth > boxWidth
        )
        Assert.assertTrue(
            "Text box height should be larger with bigger text size",
            toolMemberBoxHeight > boxHeight
        )
    }

    @Test
    fun testInputTextAndFormatForTextSize100() {
        enterTestText()
        val boxWidth = toolMemberBoxWidth
        val boxHeight = toolMemberBoxHeight
        onView(withId(R.id.pocketpaint_font_size_text))
            .perform(ViewActions.replaceText("100"))
        checkTextBoxDimensions()
        Assert.assertTrue(
            "Text box width should be larger with bigger text size",
            toolMemberBoxWidth > boxWidth
        )
        Assert.assertTrue(
            "Text box height should be larger with bigger text size",
            toolMemberBoxHeight > boxHeight
        )
    }

    @Test
    fun testInputTextAndFormatForTextSize300() {
        enterTestText()
        val boxWidth = toolMemberBoxWidth
        val boxHeight = toolMemberBoxHeight
        onView(withId(R.id.pocketpaint_font_size_text))
            .perform(ViewActions.replaceText("300"))
        checkTextBoxDimensions()
        Assert.assertTrue(
            "Text box width should be larger with bigger text size",
            toolMemberBoxWidth > boxWidth
        )
        Assert.assertTrue(
            "Text box height should be larger with bigger text size",
            toolMemberBoxHeight > boxHeight
        )
    }

    @Test
    fun testCommandUndoAndRedo() {
        enterMultilineTestText()
        onToolBarView().performCloseToolOptionsView()

        val canvasPoint = centerBox()
        onTopBarView().performClickCheckmark()
        val surfaceBitmapWidth = layerModel?.width
        val pixelsDrawingSurface = surfaceBitmapWidth?.let { IntArray(it) }

        if (surfaceBitmapWidth != null && canvasPoint != null && pixelsDrawingSurface != null) {
            layerModel?.currentLayer?.bitmap?.getPixels(
                pixelsDrawingSurface, 0, surfaceBitmapWidth, 0,
                canvasPoint.y.toInt(), surfaceBitmapWidth, 1
            )
        }

